# fullcam-client

./: FullCAM2020.http  FullCAM2020Web.http  FullCAM2024.http  README.md  main.py  pyproject.toml
examples/: simulation.py
src/fullcam_client/: __init__.py  client.py  exceptions.py  simulation.py
steps/: 01 first_save.xml  02 timing.xml  03 location_info.xml  04.1 curl query_spatial.http  04.2 downloaded_data.xml  04.3 query_spatial.xml  05.1 curl get_species.http  05.2 downloaded_data.xml  05.3 selected_mixed_species.xml  07 simulate.xml
